creating getAll and create payments
